Se modifica tamaños para dispositivos anteriores al 2016

--- a/CargasNetClient/CargasNetClient/Views/MenuPage.xaml
+++ b/CargasNetClient/CargasNetClient/Views/MenuPage.xaml
@@ -47,7 +47,7 @@
                          Grid.Row="1"
                          >
                 <Label Text="Id:"/>
-                <Label Text="1"/>
+                <Label Text="{Binding IdDispositivos}"/>
             </StackLayout>
         </Grid>    
     </ContentPage.Content>
